# tinyspec

./: .gitignore  CLAUDE.md  CNAME  Cargo.toml  LICENSE  README.md
.claude/commands/: spec-refine.md  spec-work.md  tinyspec:refine.md  tinyspec:task.md  tinyspec:work.md
.github/workflows/: ci.yml  deploy-site.yml  release.yml
.specs/: 2025-02-17-09-36-hello-world.md  2026-02-17-13-43-spec-formatting.md  2026-02-17-14-04-multi-repo-support.md  2026-02-17-14-33-rename-skills.md  2026-02-17-14-47-ask-a-question.md  2026-02-17-15-24-force-init.md  2026-02-17-15-26-educate-the-user.md  2026-02-17-16-29-github-release-action.md  2026-02-17-17-20-use-skills.md  2026-02-17-17-32-refactor.md  2026-02-17-18-00-feature-groups.md  2026-02-17-21-27-dashboard.md  2026-02-17-22-07-bridging-the-gap.md  2026-02-18-07-38-templates.md  2026-02-18-07-39-oneshot.md  2026-02-18-08-19-template-variables.md  2026-02-18-12-41-rename-work.md  2026-02-18-12-55-find-spec-directory.md  2026-02-18-14-37-install-sh.md  2026-02-18-15-18-install-ps.md  2026-02-19-10-37-explore-multi-repo.md  2026-02-20-13-52-new-skill.md  2026-03-17-22-50-parallel-agents.md  2026-03-17-23-08-test-hooks-spec.md
.specs/bugfix/: 2026-02-18-08-49-incremental-prefix.md
.specs/improvements/: 2026-03-17-21-18-test-plan-tracking.md  2026-03-17-21-19-cli-enhancements.md  2026-03-17-21-20-spec-metadata-and-dependencies.md  2026-03-17-21-22-hook-system.md  (+3 more)
scripts/: install-hooks.sh  pre-commit
site/: mdx-components.tsx  next.config.ts  package-lock.json  package.json
src/: main.rs  spec.rs
tests/: integration.rs
(+68 files in other folders)
