[package]
name = "tinyspec"
version = "0.0.3"
edition = "2024"
repository = "https://github.com/nmcdaines/tinyspec"
description = "A tiny framework for writing specs for use in language models."
license = "MIT"
exclude = [".claude/"]

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = { version = "4", features = ["unstable-dynamic"] }
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
chrono = "0.4"
pulldown-cmark = "0.13"
pulldown-cmark-to-cmark = "22"

[dev-dependencies]
assert_cmd = "2"
predicates = "3"
tempfile = "3"
